    (surendra singh lilhore via Xiaoyu Yao)

    HDFS-8542. WebHDFS getHomeDirectory behavior does not match specification.
    (Kanaka Kumar Avvaru via jghoman)

    HDFS-8055. NullPointerException when topology script is
    missing. Contributed by Anu Engineer.

    HDFS-9009. Send metrics logs to NullAppender by default. (Arpit Agarwal)

Release 2.7.2

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via Yi Liu)

    HDFS-8995. Flaw in registration bookeeping can make DN die on
    reconnect. (Kihwal Lee via yliu)

    HDFS-6945. BlockManager should remove a block from excessReplicateMap
    and decrement ExcessBlocks metric when the block is removed.  (aajisaka)

Release 2.7.1

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8595. TestCommitBlockSynchronization fails with NPE. (Arpit agarwal)

    HDFS-8576. Lease recovery should return true if the lease can be released
    and the file can be closed. (J.Andreina via szetszwo)

    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)

Release 2.7.0

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HDFS-3107. Introduce truncate. (Plamen Jeliazkov via shv)

    HDFS-7056. Snapshot support for truncate. (Plamen Jeliazkov and shv)

    HDFS-6673. Add delimited format support to PB OIV tool. (Eddy Xu via wang)

    HDFS-7655. Expose truncate API for Web HDFS. (yliu)

    HDFS-7604. Track and display failed DataNode storage locations
    in NameNode. (Chris Nauroth)

  IMPROVEMENTS

    HDFS-7470. SecondaryNameNode need twice memory when calling
    reloadFromImageFile. (zhaoyunjiong via cnauroth)

    HDFS-7606. Fix potential NPE in INodeFile.getBlocks(). (Byron Wong via shv)

    HDFS-7738. Revise the exception message for recover lease; add more truncate
    tests such as truncate with HA setup, negative tests, truncate with other